sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    else if (getValeur(i)> getValeur(i+1) && i=0) {
                                          ^